UI overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -27,13 +27,15 @@ h1{
   width: 100%;
   height: 100vh;
   position: relative;
-  background-color: rgba(0,0,0,0.4);
+  background: url(./assets/weather.jpg) no-repeat center center/cover;
   color: #fff;
 }
 
 .App .search{
   text-align: center;
   padding: 1rem;
+  position: inherit;
+  z-index: 1;
 }
 .App input{
   padding: .7rem 1.5rem;
@@ -49,7 +51,7 @@ h1{
 
 .App:before{
   content: '';
-  background: url(./assets/weather.jpg) no-repeat center center/cover;
+  background-color: rgba(0,0,0,0.4);
   position: absolute;
   width: 100%;
   height: 100%;
@@ -57,16 +59,16 @@ h1{
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: -1;
+  z-index: 0;
 }
 
 .container{
   max-width: 700px;
-  height: 700px;
+  height: 90vh;
   margin: auto;
   padding: 0 1rem;
   position: relative;
-  top: 10%;
+
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -94,6 +96,7 @@ h1{
   align-items: center;
   text-align: center;
   width: 100%;
+  height: auto;
   margin: 1rem auto;
   padding: 1rem;
   border-radius: 12px;
